--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,24 +8,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    # Make sure gradlew is executable
-    - name: Grant execute permission for gradlew
-      run: chmod +x ./gradlew        # adjust path if gradlew is inside CustomAuxViewer/
+    - name: Grant execute permission
+      run: chmod +x ./gradlew          # make wrapper executable
 
-    # Install JDK + setup Gradle cache
     - uses: gradle/actions/setup-gradle@v3
       with:
-        gradle-version: 8.5
-        cache-enabled: true
-
-    # If your project sits in a sub-folder, cd into it:
-    # working-directory: CustomAuxViewer
+        gradle-version: 8.5            # same as wrapper properties
 
     - name: Build debug APK
-      run: ./gradlew assembleDebug
+      run: ./gradlew assembleDebug     # ← SAME path:  ./gradlew
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
+    - uses: actions/upload-artifact@v4
       with:
         name: CustomAUXViewer-debug
         path: app/build/outputs/apk/debug/app-debug.apk
