--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,7 @@ jobs:
         gradle-version: 8.8            # same as wrapper properties
 
     - name: Build debug APK
+    - uses: android-actions/setup-android@v3   # installs cmdline-tools, platforms, ndk + cmake
       run: ./gradlew assembleDebug     # ← SAME path:  ./gradlew
 
     - uses: actions/upload-artifact@v4
