--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,12 @@
-buildscript {
-    repositories { google(); mavenCentral() }
-    dependencies { classpath "com.android.tools.build:gradle:8.5.0" }
+/* Top-level build.gradle — plugin versions declared once */
+plugins {
+    id 'com.android.application' version '8.5.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 }
-allprojects { repositories { google(); mavenCentral() } }
+
+allprojects {                  // repositories for every module
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
