--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,34 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
-<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+    <!-- ========= runtime permissions ========= -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-<application …>
-    …
-    <service
-        android:name=".ScreenMirrorService"
-        android:exported="false"/>
-</application>
+    <!-- ========= application ========= -->
+    <application
+        android:label="Custom AUX Viewer"
+        android:icon="@android:drawable/ic_menu_view"
+        android:roundIcon="@android:drawable/ic_menu_view"
+        android:allowBackup="true"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 
+        <!-- Main activity launched from launcher -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+
+        <!-- Foreground-service that runs MediaProjection -->
+        <service
+            android:name=".ScreenMirrorService"
+            android:foregroundServiceType="mediaProjection"
+            android:exported="false" />
+
+    </application>
 </manifest>
